Add resume page and more style changes

--- a/index.html
+++ b/index.html
@@ -6,23 +6,26 @@
     <title>Josephine's Profile</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css?family=Muli%7CRoboto:400,300,500,700,900" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Unica+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+
+
 </head>
 
 <body>
 
     <div class="main-nav">
         <ul class="nav">
-            <li class="name">Josephine</li>
-            <li><a href="/">Home</a></li>
-            <li><a href="/resume.html">Resume</a></li>
+            <li class="name">Jo</li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="resume.html">Experience</a></li>
         </ul>
     </div>
 
     <header>
         <img src="images/me.png" alt="A portrait of Josephine" class="profile-image">
         <h1 class="tag name">Aloha, I’m Jo.</h1>
-        <p class="tag location">My home is Hawaii.</p>
+        <p class="tag location">Honolulu, Hawaii</p>
     </header>
 
     <main class="flex">
@@ -35,15 +38,18 @@
 
         <div class="card">
             <h2>Goals</h2>
-            <p>I want to master the process of building web sites and increase my knowledge, skills and abilities in:</p>
+            <p>I want to become a skilled and versatile developer. I aim to learn more and gain experience in the following areas:</p>
+
             <ul class="skills">
-                <li>HTML</li>
-                <li>CSS</li>
-                <li>JavaScript</li>
-                <li>Ruby</li>
-                <li>Rails</li>
+                <li>UI Prototyping</li>
+                <li>Python Web Development</li>
+                <li>Graphic Design</li>
+                <li>JavaScript Frameworks</li>
+                <li>Software Development</li>
             </ul>
-            
+
+            <p>Unrelated to web development, some day I’d like to finish all the books in my library. Currently, I’m reading the Crazy Rich Asians trilogy by Kevin Kwan. In the near future, I wouId also like to adopt a cat!</p>
+
         </div>
 
     </main>
